# CPrimerPlus6E

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.c
ch01/: a.out  ex1_1_example.c  ex1_2_concrete.c  ex3_inform.c
ch02/: ex1_first.c  ex2_1_first.c  ex3_two_func.c  ex5_stillbad.c  fathm_ft.c  first.c  nogood.c  pr2.c  pr8.c  two_func.c
ch03/: altnames.c  band_count.c  bases.c  charcode.c  escape.c  float_error.c  platinum.c  print1.c  print2.c  show_pt.c  test.c  type_size.c
ch08/: demo.c  ex8_2_echo_eof.c  ex8_3_file_eof.c  ex8_4_guess.c  ex8_5_showchar1.c  ex8_6_showchar2.c  ex8_7_checking.c  ex8_8_menuette.c
ch09/: ex9_10_hotel.c  ex9_12_loccheck.c  ex9_13_swap1.c  ex9_14_swap2.c  ex9_15_swap3.c  ex9_1_lethead1.c  ex9_2_lethead2.c  ex9_3_lesser.c  ex9_4_misuse.c  ex9_4_proto.c  ex9_6_recur.c  ex9_7_factor.c  ex9_8_binary.c  ex9_9_usehotel.c
ch10/: demo.c  ex10_10_sum_arr1.c  ex10_11_sum_arr2.c  ex10_12_order.c  ex10_13_ptr_ops.c  ex10_14_arf.c  ex10_15_zippo1.c  ex10_16_zippo2.c  ex10_17_array2d.c  ex10_18_vararr2d.c  ex10_19_flc.c  ex10_1_day_mon1.c  ex10_2_no_data.c  ex10_3_somedata.c  ex10_4_day_mon2.c  ex10_5_designate.c  ex10_6_bounds.c  ex10_7rain.c  ex10_8_pnt_add.c  ex10_9_day_mon3.c
ch11/: demo.c  ex11_10_s_gets.h  ex11_11_scan_str.c  ex11_12_put_out.c  ex11_13_nono.c  ex11_14_put1.c  ex11_15_puts2.c  ex11_16_put_put.c  ex11_17_test_fit.c  ex11_18_str_cat.c  ex11_19_join_chk.c  ex11_1_strings1.c  ex11_20_nogo.c  ex11_21_compare.c  ex11_22_compback.c  ex11_23_quit_chk.c  ex11_24_starsrch.c  ex11_25_copy1.c  ex11_26_copy2.c  (+15 more)
(+176 files in other folders)
