cmake_minimum_required(VERSION 3.20)
project(c_primer_plus_6e C)

set(CMAKE_C_STANDARD 11)

# add_executable(test test.c)

# add_executable(example ch01/ex1_example.c)
# add_executable(concrete ch01/ex2_concrete.c)
# add_executable(inform ch01/ex3_inform.c)

# add_executable(first ch02/ex1_first.c)
# add_executable(fathm_ft ch02/ex2_fathm_ft.c)
# add_executable(two_func ch02/ex3_two_func.c)
# add_executable(nogood ch02/ex4_nogood.c)
# add_executable(stillbad ch02/ex5_stillbad.c)
# add_executable(pr1 ch02/pr1.c)
# add_executable(pr2 ch02/pr2.c)
# add_executable(pr3 ch02/pr3.c)
# add_executable(pr4 ch02/pr4.c)
# add_executable(pr5 ch02/pr5.c)
# add_executable(pr6 ch02/pr6.c)
# add_executable(pr7 ch02/pr7.c)
add_executable(pr8 ch02/pr8.c)
